<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPSTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="longitude_default">initializing..</string>
    <string name="latitude_default">initializing..</string>
    
    <string name="time_default">waiting..</string>

</resources>