<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >
   <TableLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="10dip">
       <TableRow>
			<TextView
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/longitude" />
    		<TextView
        		android:id="@+id/longitude"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_marginLeft="20dip"
        		android:textStyle="bold"
        		android:text="@string/longitude_default" />
    	</TableRow>
    	<TableRow>
			<TextView
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/latitude" />
    		<TextView
        		android:id="@+id/latitude"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_marginLeft="20dip"
        		android:textStyle="bold"
        		android:text="@string/latitude_default" />
    	</TableRow>
	</TableLayout>
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_margin="20dip"
	    android:text="Time taken to initialize GPS:"/>
	<TextView 
	    android:id="@+id/time"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:textStyle="bold"
	    android:textSize="20dip"
	    android:text="@string/time_default"/>
   	
</LinearLayout>